--- a/templates/index.html
+++ b/templates/index.html
@@ -136,12 +136,12 @@
 <body>
     <header>
         <div class="logo-container">
-            <img src="depositphotos_23428992-stock-illustration-a-swimming-pool-removebg-preview(1).png" alt="Логотип" class="logo-img">
+            <img src="url_for('static', filename='img/depositphotos_23428992-stock-illustration-a-swimming-pool-removebg-preview(1).png')" alt="Логотип" class="logo-img">
             <h1 class="logo-text">Магазин Бассейнів</h1>
         </div>
         <nav class="navbar">
-            <button onclick="navigateTo('products')" class="nav-button">Товари</button>
-            <button onclick="navigateTo('about')" class="nav-button">Про нас</button>
+            <a href="{{url_for('products')}}" class="nav-button">Товари</a>
+            <a href="{{url_for('about')}}" class="nav-button">Про нас</a>
         </nav>
     </header>
 
