--- a/templates/about.html
+++ b/templates/about.html
@@ -93,7 +93,6 @@
             <p>Сьогодні <strong>SwimmingPools</strong> — це не просто компанія, це спільнота людей, які прагнуть створити ідеальні умови для відпочинку. Ми дякуємо всім нашим клієнтам за довіру і чекаємо на можливість реалізувати вашу мрію про ідеальний басейн!</p>
         </div>
 
-        <button class="back-button" onclick="navigateTo('index')">⬅️</button> <!-- Стрелка назад -->
     </main>
 
     <footer>
@@ -102,7 +101,7 @@
 
     <script>
         function navigateTo(page) {
-            window.location.href = page + '.html'; // Переход на іншу сторінку
+            window.location.href = page; // Переход на іншу сторінку
         }
     </script>
 </body>
